--- a/app.json
+++ b/app.json
@@ -2,13 +2,13 @@
     "expo": {
         "name": "AllyAI-mobile",
         "slug": "AllyAI-mobile",
-        "version": "1.0.0",
+        "version": "0.0.1",
         "orientation": "portrait",
-        "icon": "./assets/icon.png",
+        "icon": "./assets/images/logo.png",
         "userInterfaceStyle": "dark",
         "newArchEnabled": true,
         "splash": {
-            "image": "./assets/splash-icon.png",
+            "image": "./assets/images/logo.png",
             "resizeMode": "contain",
             "backgroundColor": "#0f0f0f"
         },
@@ -17,13 +17,16 @@
         },
         "android": {
             "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
+                "foregroundImage": "./assets/images/logo.png",
                 "backgroundColor": "#0f0f0f"
             },
             "edgeToEdgeEnabled": true
         },
         "web": {
-            "favicon": "./assets/favicon.png"
+            "favicon": "./assets/images/logo.png"
+        },
+        "extra": {
+            "updateDate": "January 15, 2025"
         }
     }
 }
