--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
+    "react-native-gesture-handler": "^2.28.0"
   },
   "private": true
 }
