--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-navigation/native": "^7.1.17",
         "expo": "~54.0.2",
         "expo-constants": "^18.0.8",
+        "expo-linear-gradient": "^15.0.7",
         "expo-linking": "^8.0.8",
         "expo-status-bar": "~3.0.8",
         "react": "19.1.0",
