--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
+    "@sentry/react-native": "^7.0.1",
     "expo": "54.0.6",
     "expo-constants": "^18.0.8",
+    "expo-dev-client": "~6.0.12",
+    "expo-font": "~14.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
@@ -22,8 +25,6 @@
     "react-native": "0.81.4",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.28.0",
-    "expo-dev-client": "~6.0.12",
-    "expo-font": "~14.0.8",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
