--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "^8.0.8",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-bottom-sheet": "^1.1.0",
