--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "private": true
 }
