--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@google/genai": "^1.20.0",
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@sentry/react-native": "~6.20.0",
@@ -29,13 +31,14 @@
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.2.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "@react-native-community/netinfo": "11.4.1"
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
